# SMTParse

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.sh
app/: CMakeLists.txt
benchmark/test/: matrix-1-all-2.smt2  smalltest=>.smt2  tmp.smt2
python/: CMakeLists.txt  NRA_op.cc  smt_op_test.py  test_cpp.py  test_lib.py
python/runmaple/: csv_to_mpl.py  python_maple.py  read_test_data.py  run_test.py  test_maple.py
python/smt_python_parse/src/: formula.py  func_op.py  smt_lib_parse.py  smt_op.py
python/smt_python_parse/test/: smt_test_item.py  tmp.py
sh/: setup.sh
src/: CMakeLists.txt  formula.cc  formula.hh  nra_analyze.cc  nra_analyze.hh
test/: CMakeLists.txt  parsertest.cc
